Fixes for #16394 - Quicklinks in header:"Preferences"-link is visible if user is NOT logged in and #16395 - Quicklinks in header:Include a link "Administration" if the user is a WikiSysop
git-svn-id: http://halodev.ontoprise.com/svn/HaloSMWExtension/trunk@13250 f80b7aa0-dfcc-4e65-a0d9-74108174cbc8

--- a/skins/ontoskin3/css/skin-main.css
+++ b/skins/ontoskin3/css/skin-main.css
@@ -100,7 +100,7 @@ textarea {
 	color: #AAA;
 	float: right;
 	font-size: smaller;
-	margin: 15px 50px 0 0;
+	margin: 15px 0;
 }
 
 #quicklinks a {
